# STMC

./: .gitignore  CMakeLists.txt
src/ForLib/: F_df.f  F_df.h  F_pd.f  F_pd.h  F_qdf.f  F_qdf.h  F_xq.f  F_xq.h  Ftest.f  ac_int.f  ac_int.h  ac_intj.f  addln.f  addln.h  addln2.f  addln_cut.f  addln_cut.h  autcora.f  autcorf.f  autcorf.h  autcorj.f  autcorja.f  autoj_tau.f  bbi1_nk_df.f  bbi1_nk_df.h  bbi1_nk_xq.f  bbi1_nk_xq.h  bbi_df.f  bbi_df.h  bbi_nk_df.f  bbi_nk_df.h  bbi_nk_xq.f  bbi_nk_xq.h  bbi_qdf.f  bbi_qdf.h  beta.f  beta.h  beta_i.f  beta_i.h  bias.f  (+168 more)
src/ForProc/F_stud/: F_stud.f
src/ForProc/F_test/: F_test.f
src/ForProc/Gau_dif/: gau_dif.f
src/ForProc/Stud_dif/: stud_dif.f
src/ForProc/ratio_eb/: ratio_eb.f
src/ForProg/AutoC/: auto_gau.f  bauto.f  uncor_gau.f
src/ForProg/Ferdinand/: ferdinand.f
src/ForProg/MC_On/: ana_ts1_on.f  ana_ts_on.f  ana_ts_onm.f  o2_met.f  o2_ts.f  o3_init.f  o3_mchb.f  o3_tshb.f  o3_tshbm.f  on_init.f  on_met.f  on_ts.f  on_tsm.f  sphere_test.f  xy_init.f  xy_init1.f  xy_met.f  xy_met0.f  xy_met1.f  xy_ts.f  xy_ts0.f  xy_ts1.f
src/ForProg/MC_Potts/: ana_hist.f  ana_hist.f.bak  ana_kol.f  ana_mag.f  ana_pmu.f  ana_pmu_ts.f  ana_pmuh.f  ana_ts1_p.f  ana_ts_p.f  ana_ts_pm.f  ana_ts_pm.f.bak  ana_ts_pr.f  ana_tshb_p.f  p_clsw_ts.f  p_clw_ts.f  p_clw_ts.f.bak  p_e_cases.f  p_e_hist.f  p_e_init.f  p_e_mc.f  p_hb_ts.f  p_met_ts.f  p_met_tsm.f  p_metr_ts.f  p_mu.f  p_mu_init.f  p_mu_rec.f  p_mu_ts.f  potts1_hist.f  potts1_histn.f  potts1_init.f  potts1_met.f  potts1_metn.f  potts_cl.f  potts_cl.f.bak  potts_clw.f  potts_clw.f.bak  potts_hihb.f  potts_hist.f  potts_histcl.f  (+12 more)
src/ForProg/MPI_Potts/: ana_pt.f  p_hbtest_mpi.f  p_inithb_mpi.f  p_pt_mpi.f  p_ptmpi0.f  p_ptmpi1.f  p_ptmpi2.f  potts_mchb.f  pt_rec0.f  write_mpi_i.f  write_progress.f
src/ForProg/Marsaglia/: mar.f  ran_range.f
src/ForProg/Test/: addln_test.f  isort_test.f  lran.f  permutations.f
src/ForProg/chi2/: chi2_tabs.f
src/ForProg/fit_g/: fit_g.f  fit_gc.f  fit_ggnu.f  gfit.f  gfitj.f  subg_1ox.f  subg_exp.f  subg_expc.f  subg_expc2.f  subg_linear.f  subg_power2f.f  subg_powerc.f
src/ForProg/fit_g_old/: gfit.f  gfit.f.bak  gfitj.f  subg_1ox.f  subg_exp2.f  subg_power.f  subg_power2.f  subg_power2f.f  subg_power2p.f
src/ForProg/fit_l/: lfit.f  lfitj.f  subl_1ox.f  subl_exp.f  subl_linear.f  subl_power.f
src/ForProg/fit_l_old/: lfit.f  lfit.f.bak  lfitj.f  subl_linear.f  subl_power.f
src/ForProg/histogram/: hist.f
src/ForProg/lat/: lat3d.f  lat3d_ckb.f  lat4d.f  lat4d_ckb.f
src/ForProg/student/: stud_tabs.f
src/ForSub/: ac_int.f  ac_int.h  ac_intj.h  addln2.h  autcora.f  autcora.h  autcorj.f  autcorj.h  autcorja.f  autcorja.h  autoj_tau.f  autoj_tau.h  bias.f  bias.h  bin_inta.f  bining.f  datjack.f  datjack2.f  df_gnu.f  eigen_2x2.f  ellipse.f  fct_ln_init.f  fit_l.f  fit_lgnu.f  forsub.h  heap_iper.f  heap_per.f  heapisort.f  ipointer.f  ixcor.f  kolm1.f  kolm2_as.f  kolm2_as2.f  kolm2_del2.f  lat_init.f  latc_init.f  mat_gau.f  o3_act.f  o3_ran.f  on_act.f  (+22 more)
tests/test-forlib/test-01-sampling-statistics/: test-01-01-distributions.cpp
tests/test-forprog/: todo.txt
